@@ -121,6 +121,9 @@ static Image *ReadCAPTIONImage(const ImageInfo *image_info,
     height,
     width;
 
+  ssize_t
+    offset;
+
   TypeMetric
     metrics;
 
@@ -289,10 +292,12 @@ static Image *ReadCAPTIONImage(const ImageInfo *image_info,
   i=FormatMagickCaption(image,draw_info,split,&metrics,&caption);
   (void) CloneString(&draw_info->text,caption);
   caption=DestroyString(caption);
+  offset=(ssize_t) (draw_info->stroke_width/2.0);
   (void) FormatLocaleString(geometry,MaxTextExtent,"%+g%+g",MagickMax(
     draw_info->direction == RightToLeftDirection ? (double) image->columns-
-    metrics.bounds.x2 : -metrics.bounds.x1,0.0),draw_info->gravity ==
-    UndefinedGravity ? MagickMax(metrics.ascent,metrics.bounds.y2) : 0.0);
+    metrics.bounds.x2 : -metrics.bounds.x1,0.0),(draw_info->gravity ==
+    UndefinedGravity ? MagickMax(metrics.ascent,metrics.bounds.y2) : 0.0)+
+    offset);
   (void) CloneString(&draw_info->geometry,geometry);
   status=AnnotateImage(image,draw_info);
   if (image_info->pointsize == 0.0)
